fix login form spacing

--- a/src/App.css
+++ b/src/App.css
@@ -309,6 +309,10 @@ section {
 .btn--login {
   width: 100%;
 }
+.login__heading:last-of-type {
+  margin-top: 3rem;
+  margin-bottom: 0rem;
+}
 .hidden {
   display: none;
 }
